--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,17 @@
-certifi==2020.4.5.1
+aiohttp==3.6.2
+async-timeout==3.0.1
+attrs==19.3.0
 chardet==3.0.4
 click==7.1.2
-Flask==1.1.2
+fastapi==0.55.1
 gunicorn==20.0.4
+h11==0.9.0
 idna==2.9
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
+multidict==4.7.6
 Pillow==7.1.2
-praw==7.0.0
-prawcore==1.4.0
-requests==2.23.0
-six==1.15.0
-update-checker==0.17
-urllib3==1.25.9
-websocket-client==0.57.0
-Werkzeug==1.0.1
-wand
+pydantic==1.5.1
+starlette==0.13.2
+uvicorn==0.11.5
+Wand==0.6.1
+websockets==8.1
+yarl==1.4.2
